# sendly

./: .dockerignore  .gitignore  .gitmodules  .tool-versions  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  logging.yaml  pyproject.toml  run.py  run_worker.py  start.sh
.cursor/rules/: routers.mdc  service.mdc  style.mdc  tests.mdc
.github/workflows/: push.yml  python.yml
alembic/: env.py
alembic/versions/: 2026_01_30_1624-5cb4fe57e874_add_system_account.py  2026_02_14_move_user_to_attributes_column.py  init.py
app/: config.py  db.py  main.py  settings_manager.py  telemetry.py
app/auth/: rbac.py
app/commands/: send_email_command.py
app/commands/providers/: __init__.py  process_delivery_events_command.py
app/constants/: api.py  email.py
app/core/: celery_app.py  logging_config.py  server_settings.py  telemetry.py
app/exceptions/: __init__.py  handlers.py
app/middleware/: db_session.py
app/models/: __init__.py  app_setting.py  email.py  email_event.py  mixins.py  provider.py  tenant.py  user.py
app/providers/: base.py  email_provider.py  postmark_provider.py  provider_errors.py  registry.py
app/repositories/: __init__.py  email_repository.py  soft_delete_repository.py  user_repository.py
app/routers/: __init__.py  email.py  provider.py  system.py  tenant.py  user.py
app/routers/utils/: dependencies.py
app/schemas/: __init__.py  common.py  email.py  provider.py  system.py  tenant.py  user.py
app/security/: __init__.py  crypto.py
app/services/: __init__.py  email_lifecycle_service.py  email_service.py  provider_service.py  soft_delete_service.py  tenant_service.py  user_service.py
app/tasks/: __init__.py
app/utils/: cache.py  date_filter.py  m2m_token.py
app/utils/db/: filtering.py
app/ws/: manager.py  status.py
docs/: api-patterns.md  database.md  design.md
docs/prompts/: incidents.md  projet-updates.md  pull-requests.md
scripts/: generate_credential_key.py
tests/: conftest.py  test_db_connection.py
tests/app/commands/providers/: __init__.py  test_process_delivery_events_command.py
tests/app/repositories/: test_email_repository.py  test_user_repository.py
tests/app/routers/: test_email.py  test_provider.py  test_tenant.py  test_user.py
tests/app/services/: test_email_lifecycle_service.py  test_email_service.py  test_provider_service.py  test_tenant_service.py  test_user_service.py
tests/app/utils/: test_auth.py  test_cache.py  test_date_filter_timezone_fix.py  test_dependencies.py
tests/fixtures/: __init__.py  email_fixtures.py  provider_fixtures.py  tenant_fixtures.py  user_fixtures.py
tests/routers/: test_health.py
